<resources>
    <string name="app_name">Attendence System</string>
    <string name="username">Username</string>
    <string name="user">Username</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="conform_password">Conform Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>